# py-dwg-to-img

./: .gitignore  README.md  pyproject.toml
src/: process_dwg.py
tests/: test_process_dwg.py
