[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dwg-to-img"
version = "0.2.1"
authors = [
    { name = "Danny" },
]
description = "Conversion of CAD DWG engineering files to PNG image files"
license = { file = "License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

requires-python = ">=3.12"

dependencies = [
    "ezdxf[draw]>=1.3",
    "pillow>=11.1",
]

[project.optional-dependencies]
dev = [
    "build",
]
tests = [
    "pytest",
]
